--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission 2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400&family=Roboto&family=Shizuru&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="mission-introduction">
+            <h1><b>Stay Focused on <br><span class="mission-year">Mission 2022</span></b></h1>
+            <p><b>The future of web development is nowhere in the dark, as every industry segment requires a website to
+                    take its products or services online, and web development plays an important role here. That's why I
+                    am starting to do something new in this industry.</b></p>
+            <a class="explore-button" target="_blank" href="">Explore More</a><br><br>
+            <h4>Scroll down to explore more about us</h4>
+        </div>
+        <div class="mission-introduction">
+            <img src="./images/picture-1.png" alt="Looding...">
+        </div>
+    </section>
+
 </body>
+
 </html>
