--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <section>
+    <section id="top-section">
         <div class="mission-introduction">
-            <h1><b>Stay Focused on <br><span class="mission-year">Mission 2022</span></b></h1>
+            <h1>Stay Focused on <br><span class="mission-year">Mission 2022</span></h1>
             <p><b>The future of web development is nowhere in the dark, as every industry segment requires a website to
                     take its products or services online, and web development plays an important role here. That's why I
                     am starting to do something new in this industry.</b></p>
@@ -25,7 +25,31 @@
             <h4>Scroll down to explore more about us</h4>
         </div>
         <div class="mission-introduction">
-            <img src="./images/picture-1.png" alt="Looding...">
+            <img src="./person/picture-1.png" alt="Loading...">
+        </div>
+    </section>
+    <div>
+        <h2>My Mission in <span class="mission-year">2022</span></h2>
+    </div>
+    <section id="middle-section">
+        <div class="mission-area">
+            <img src="./illustrators/illustrator-1.png" alt="Loading...">
+            <h3>Mission</h3>
+            <p>My mission is to provide customer-centric, result-oriented, cost-competitive innovative & functional IT
+                Solutions to our valuable global clients. Empower our clients to respond faster and more intuitively to
+                changing market dynamics</p>
+        </div>
+        <div class="vision-area">
+            <img src="./illustrators/illustrator-2.png" alt="Loading...">
+            <h3>Vission</h3>
+            <p>The employment of web developers and digital designers is projected to grow 13 per cent from 2020 to
+                2030, faster than the average for all occupations. I want to go far in this field as much as I can.</p>
+        </div>
+        <div class="goals-area">
+            <img src="./illustrators/illustrator-1.png" alt="Loading...">
+            <h3>Goals</h3>
+            <p>The main objective when working as a developer is to be productive and deliver value to the company. As a
+                developer, the aim is to build practical applications that will be 100% successful.</p>
         </div>
     </section>
 
