=bottom part done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section id="top-section">
         <div class="mission-introduction">
-            <h1>Stay Focused on <br><span class="mission-year">Mission 2022</span></h1>
+            <h1 class="top-tittle">Stay Focused on <br><span class="mission-year">Mission 2022</span></h1>
             <p><b>The future of web development is nowhere in the dark, as every industry segment requires a website to
                     take its products or services online, and web development plays an important role here. That's why I
                     am starting to do something new in this industry.</b></p>
@@ -32,24 +32,67 @@
         <h2>My Mission in <span class="mission-year">2022</span></h2>
     </div>
     <section id="middle-section">
-        <div class="mission-area">
-            <img src="./illustrators/illustrator-1.png" alt="Loading...">
-            <h3>Mission</h3>
-            <p>My mission is to provide customer-centric, result-oriented, cost-competitive innovative & functional IT
-                Solutions to our valuable global clients. Empower our clients to respond faster and more intuitively to
-                changing market dynamics</p>
+        <div>
+
+            <div class="mission-area">
+                <div class="illustrator-image"><img src="./illustrators/illustrator-1.png" alt="">
+                </div>
+                <div class="details-text">
+                    <h3>Mission</h3>
+                    <p>My mission is to provide customer-centric, result-oriented, cost-competitive innovative &
+                        functional
+                        IT
+                        Solutions to our valuable global clients. Empower our clients to respond faster and more
+                        intuitively
+                        to
+                        changing market dynamics</p>
+                </div>
+            </div>
         </div>
+
         <div class="vision-area">
-            <img src="./illustrators/illustrator-2.png" alt="Loading...">
-            <h3>Vission</h3>
-            <p>The employment of web developers and digital designers is projected to grow 13 per cent from 2020 to
-                2030, faster than the average for all occupations. I want to go far in this field as much as I can.</p>
+            <div class="illustrator-image"><img src="./illustrators/illustrator-2.png" alt="">
+            </div>
+            <div class="details-text">
+                <h3>Vission</h3>
+                <p>The employment of web developers and digital designers is projected to grow 13 per cent from 2020 to
+                    2030, faster than the average for all occupations. I want to go far in this field as much as I can.
+                </p>
+            </div>
         </div>
+
         <div class="goals-area">
-            <img src="./illustrators/illustrator-1.png" alt="Loading...">
-            <h3>Goals</h3>
-            <p>The main objective when working as a developer is to be productive and deliver value to the company. As a
-                developer, the aim is to build practical applications that will be 100% successful.</p>
+            <div class="illustrator-image"><img src="./illustrators/illustrator-3.png" alt="">
+            </div>
+            <div class="details-text">
+                <h3>Goals</h3>
+                <p>The main objective when working as a developer is to be productive and deliver value to the company.
+                    As a
+                    developer, the aim is to build practical applications that will be 100% successful.</p>
+            </div>
+        </div>
+    </section>
+    <section id="bottom-section">
+        <div class="development-details">
+            <img src="./pictures/coding.png" alt="Loading...">
+        </div>
+        <div class="development-details">
+            <h1 class="bottom-tittle">Develop<br>Without Limits</h1>
+            <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
+                success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
+            <a class="explore-button" target="_blank" href="">Our Portfolio</a>
+        </div>
+    </section>
+    <section id="bottom-section">
+        
+        <div class="development-details">
+            <h1 class="bottom-tittle">Develop<br>Without Limits</h1>
+            <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
+                success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
+            <a class="explore-button" target="_blank" href="">More Detail</a>
+        </div>
+        <div class="development-details">
+            <img src="./pictures/project.png" alt="Loading...">
         </div>
     </section>
 
