=bottom part done

--- a/index.html
+++ b/index.html
@@ -72,26 +72,28 @@
             </div>
         </div>
     </section>
-    <section id="bottom-section">
-        <div class="development-details">
+    <section id="bottom-section-1">
+        <div class="development-details-1">
             <img src="./pictures/coding.png" alt="Loading...">
         </div>
-        <div class="development-details">
+        <div class="development-details-2">
             <h1 class="bottom-tittle">Develop<br>Without Limits</h1>
             <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
-                success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
+                success—that, and our shared commitment to developing and strengthening the afterschool profession. Our
+                designers have received such positive reviews that we have decided to offer stand alone design services.
+                Our in-house team works closely with clients to determine the p urpose of the product and needs of the
+                end-users.</p>
             <a class="explore-button" target="_blank" href="">Our Portfolio</a>
         </div>
     </section>
-    <section id="bottom-section">
-        
-        <div class="development-details">
-            <h1 class="bottom-tittle">Develop<br>Without Limits</h1>
+    <section id="bottom-section-2">
+        <div class="development-details-3">
+            <h1 class="bottom-tittle">Know our<br>Global Community</h1>
             <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
-                success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
-            <a class="explore-button" target="_blank" href="">More Detail</a>
+                success—that, and our shared commitment to developing and strengthening the afterschool profession. Learning About Our Global Community takes young readers on a journey beyond their own communities to learn about aspects of daily life in other places around the world.</p>
+            <a class="explore-button" target="_blank" href="">More Details</a>
         </div>
-        <div class="development-details">
+        <div class="development-details-4">
             <img src="./pictures/project.png" alt="Loading...">
         </div>
     </section>
