--- a/index.html
+++ b/index.html
@@ -90,13 +90,25 @@
         <div class="development-details-3">
             <h1 class="bottom-tittle">Know our<br>Global Community</h1>
             <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
-                success—that, and our shared commitment to developing and strengthening the afterschool profession. Learning About Our Global Community takes young readers on a journey beyond their own communities to learn about aspects of daily life in other places around the world.</p>
+                success—that, and our shared commitment to developing and strengthening the afterschool profession.
+                Learning About Our Global Community takes young readers on a journey beyond their own communities to
+                learn about aspects of daily life in other places around the world.</p>
             <a class="explore-button" target="_blank" href="">More Details</a>
         </div>
         <div class="development-details-4">
             <img src="./pictures/project.png" alt="Loading...">
         </div>
     </section>
+    <footer>
+        <h1 class="company-name"><B><U>KEEYAN <span class="company-last">TECHNOLOGIES</U></B></h1>
+        <div class="address">
+            <p><B>Contact US:</B><br>House no:11/D<br>Block:-B<br>Victoria Road, Tangail
+                Sadar<br>Tangail-1900<br>Phone: +88 01716706061<br>e-Mail:-asmrsaeed@gmail.com<br><br><span class="copyright">© 2022<B> KEEYAN TECHNOLOGIES</B></span></p>
+                
+        </div>
+    </footer>
+
+    
 
 </body>
 
