--- a/index.html
+++ b/index.html
@@ -103,12 +103,13 @@
         <h1 class="company-name"><B><U>KEEYAN <span class="company-last">TECHNOLOGIES</U></B></h1>
         <div class="address">
             <p><B>Contact US:</B><br>House no:11/D<br>Block:-B<br>Victoria Road, Tangail
-                Sadar<br>Tangail-1900<br>Phone: +88 01716706061<br>e-Mail:-asmrsaeed@gmail.com<br><br><span class="copyright">© 2022<B> KEEYAN TECHNOLOGIES</B></span></p>
-                
+                Sadar<br>Tangail-1900<br>Phone: +88 01716706061<br>e-Mail:-asmrsaeed@gmail.com<br><br><span
+                    class="copyright">© 2022<B> KEEYAN TECHNOLOGIES</B></span></p>
+
         </div>
     </footer>
 
-    
+
 
 </body>
 
